[package]
name = "anodize-stage-announce"
description = "Announce stage for the anodize release tool — sends release notifications via webhooks"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anodize-core.workspace = true
anyhow.workspace = true
reqwest.workspace = true
serde_json.workspace = true
