[package]
name = "anodizer-stage-announce"
description = "Announce stage for the anodizer release tool — sends release notifications via webhooks"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anodizer-core.workspace = true
anyhow.workspace = true
chrono.workspace = true
reqwest.workspace = true
lettre.workspace = true
serde_json.workspace = true
hmac.workspace = true
sha1.workspace = true
base64.workspace = true
tracing.workspace = true

[dev-dependencies]
serde.workspace = true
serial_test.workspace = true
serde_yaml_ng.workspace = true
