[package]
name = "anodizer-stage-announce"
description = "Announce stage for the anodizer release tool — sends release notifications via webhooks"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anodizer-core.workspace = true
anodizer-stage-publish.workspace = true
anyhow.workspace = true
chrono.workspace = true
reqwest.workspace = true
lettre.workspace = true
serde.workspace = true
serde_json.workspace = true
hmac.workspace = true
sha1.workspace = true
base64.workspace = true
tracing.workspace = true

[dev-dependencies]
anodizer-core = { workspace = true, features = ["test-helpers"] }
serial_test.workspace = true
serde_yaml_ng.workspace = true
tempfile.workspace = true
