[package]
name = "anodizer-stage-appbundle"
description = "macOS app bundle stage for anodizer release automation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
anodizer-core.workspace = true
anyhow.workspace = true
glob.workspace = true

[dev-dependencies]
anodizer-core = { workspace = true, features = ["test-helpers"] }
serde_yaml_ng.workspace = true
tempfile.workspace = true
