[package]
name = "anodizer-stage-appbundle"
description = "macOS app bundle stage for anodizer release automation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["release", "packaging", "macos", "app-bundle", "dotapp"]
categories.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"

[dependencies]
anodizer-core.workspace = true
anyhow.workspace = true
glob.workspace = true

[dev-dependencies]
anodizer-core = { workspace = true, features = ["test-helpers"] }
serde_yaml_ng.workspace = true
tempfile.workspace = true
