[package]
name = "anodize-stage-archive"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
anodize-core.workspace = true
anyhow.workspace = true
flate2.workspace = true
tar.workspace = true
zip.workspace = true

[dev-dependencies]
tempfile.workspace = true
