[package]
name = "anodize-stage-archive"
description = "Archive stage for the anodize release tool — packages binaries into tar.gz, zip, and other formats"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anodize-core.workspace = true
anyhow.workspace = true
flate2.workspace = true
tar.workspace = true
zip.workspace = true
xz2.workspace = true
zstd.workspace = true
glob.workspace = true

[dev-dependencies]
anodize-core = { workspace = true, features = ["test-helpers"] }
tempfile.workspace = true
serde_yaml_ng.workspace = true
