[package]
name = "anodizer-stage-archive"
description = "Archive stage for the anodizer release tool — packages binaries into tar.gz, zip, and other formats"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"

[dependencies]
anodizer-core.workspace = true
anyhow.workspace = true
chrono.workspace = true
flate2.workspace = true
tar.workspace = true
zip.workspace = true
xz2.workspace = true
zstd.workspace = true
glob.workspace = true

[dev-dependencies]
anodizer-core = { workspace = true, features = ["test-helpers"] }
tempfile.workspace = true
serde_yaml_ng.workspace = true
