[package]
name = "anodizer-stage-attest"
description = "SLSA build-provenance / attestation stage for the anodizer release tool"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"

[dependencies]
anodizer-core.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
anodizer-core = { workspace = true, features = ["test-helpers"] }
anodizer-stage-checksum.workspace = true
anodizer-stage-sign.workspace = true
serde_json.workspace = true
tempfile.workspace = true
