[package]
name = "anodizer-stage-blob"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
description = "Cloud storage (S3/GCS/Azure) upload stage for anodizer release automation"

[dependencies]
anodizer-core.workspace = true
anyhow.workspace = true
base64.workspace = true
glob.workspace = true
object_store.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
anodizer-core = { workspace = true, features = ["test-helpers"] }
tempfile.workspace = true
serde_yaml_ng.workspace = true
serial_test.workspace = true
