[package]
name = "anodize-stage-build"
description = "Build stage for the anodize release tool — compiles Rust binaries for target triples"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anodize-core.workspace = true
anyhow.workspace = true
glob.workspace = true
toml_edit.workspace = true

[dev-dependencies]
tempfile = "3"
