[package]
name = "anodizer-stage-build"
description = "Build stage for the anodizer release tool — compiles Rust binaries for target triples"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"

[dependencies]
anodizer-core.workspace = true
anyhow.workspace = true
toml_edit.workspace = true

[dev-dependencies]
anodizer-core = { workspace = true, features = ["test-helpers"] }
serde_yaml_ng.workspace = true
serial_test.workspace = true
tempfile = "3"
