[package]
name = "anodize-stage-changelog"
description = "Changelog stage for the anodize release tool — generates changelogs from git history"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anodize-core.workspace = true
anyhow.workspace = true
regex.workspace = true

[dev-dependencies]
serde_yaml.workspace = true
tempfile.workspace = true
