[package]
name = "anodize-stage-checksum"
description = "Checksum stage for the anodize release tool — generates SHA-256, SHA-1, SHA-512, and BLAKE2 checksums"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anodize-core.workspace = true
anyhow.workspace = true
sha1.workspace = true
sha2.workspace = true
blake2.workspace = true
glob.workspace = true

[dev-dependencies]
tempfile.workspace = true
serde_yaml.workspace = true
