[package]
name = "anodizer-stage-dmg"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "macOS DMG disk image stage for anodizer release automation"

[dependencies]
anodizer-core.workspace = true
anyhow.workspace = true
tempfile.workspace = true

[dev-dependencies]
serde_yaml_ng.workspace = true
