[package]
name = "anodize-stage-docker"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
anodize-core.workspace = true
anyhow.workspace = true

[dev-dependencies]
tempfile.workspace = true
serde_yaml.workspace = true
