[package]
name = "anodize-stage-docker"
description = "Docker stage for the anodize release tool — builds and pushes container images"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anodize-core.workspace = true
anyhow.workspace = true

[dev-dependencies]
tempfile.workspace = true
serde_yaml_ng.workspace = true
