[package]
name = "anodizer-stage-docker"
description = "Docker stage for the anodizer release tool — builds and pushes container images"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anodizer-core.workspace = true
anyhow.workspace = true
regex.workspace = true
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
serde_yaml_ng.workspace = true
serial_test.workspace = true
anodizer-core = { workspace = true, features = ["test-helpers"] }
