[package]
name = "anodizer-stage-flatpak"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
description = "Flatpak Linux bundle stage for anodizer release automation"

[dependencies]
anodizer-core.workspace = true
anyhow.workspace = true
glob.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true

[dev-dependencies]
serde_yaml_ng.workspace = true
