[package]
name = "anodize-stage-nfpm"
description = "nFPM stage for the anodize release tool — generates deb, rpm, and apk packages"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anodize-core.workspace = true
anyhow.workspace = true
tempfile.workspace = true

[dev-dependencies]
tempfile.workspace = true
serde_yaml_ng.workspace = true
