[package]
name = "anodizer-stage-nfpm"
description = "nFPM stage for the anodizer release tool — generates deb, rpm, and apk packages"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"

[dependencies]
anodizer-core.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng.workspace = true
tempfile.workspace = true

[dev-dependencies]
tempfile.workspace = true
serde_yaml_ng.workspace = true
