[package]
name = "anodizer-stage-notarize"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "macOS code signing and notarization stage for anodizer release automation"

[dependencies]
anodizer-core.workspace = true
anyhow.workspace = true
base64.workspace = true
sha2.workspace = true
tempfile.workspace = true

[dev-dependencies]
serde_yaml_ng.workspace = true
