[package]
name = "anodizer-stage-notarize"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["release", "macos", "notarization", "codesign", "signing"]
categories.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
description = "macOS code signing and notarization stage for anodizer release automation"

[dependencies]
anodizer-core.workspace = true
anyhow.workspace = true
base64.workspace = true
sha2.workspace = true
tempfile.workspace = true

[dev-dependencies]
anodizer-core = { workspace = true, features = ["test-helpers"] }
serde_yaml_ng.workspace = true
serial_test.workspace = true
