[package]
name = "anodize-stage-nsis"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "NSIS Windows installer stage for anodize release automation"

[dependencies]
anodize-core.workspace = true
anyhow.workspace = true
glob.workspace = true
tempfile.workspace = true

[dev-dependencies]
serde_yaml_ng.workspace = true
