[package]
name = "anodizer-stage-pkg"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["release", "packaging", "macos", "installer", "pkg"]
categories.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
description = "macOS pkg installer stage for anodizer release automation"

[dependencies]
anodizer-core.workspace = true
anyhow.workspace = true
# Directory-capable mtime setter (utimensat, not open(O_WRONLY)) so flat-pkg
# payload directories are stamped deterministically before cpio.
filetime.workspace = true
# Deterministic in-process gzip of the cpio Payload (no embedded mtime / OS
# byte), replacing the shell `gzip -9n` so the gzip stream is byte-stable.
flate2.workspace = true
glob.workspace = true
tempfile.workspace = true

[dev-dependencies]
serde_yaml_ng.workspace = true
