[package]
name = "anodizer-stage-prepublish-guard"
description = "Pre-publish template-render guard for the anodizer release tool — aborts a release before any irreversible publisher fires if a publisher-manifest or announcer template fails to render"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"

[dependencies]
anodizer-core.workspace = true
anodizer-stage-publish.workspace = true
anodizer-stage-announce.workspace = true
anyhow.workspace = true

[dev-dependencies]
anodizer-core = { workspace = true, features = ["test-helpers"] }
anodizer-stage-publish = { workspace = true, features = ["test-support"] }
