[package]
name = "anodize-stage-publish"
description = "Publish stage for the anodize release tool — publishes crates and package manager manifests"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anodize-core.workspace = true
anyhow.workspace = true
glob.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml_ng.workspace = true
tempfile.workspace = true
tera.workspace = true
base64.workspace = true
regex.workspace = true
reqwest = { workspace = true, features = ["native-tls"] }
sha2.workspace = true

[dev-dependencies]
anodize-core = { workspace = true, features = ["test-helpers"] }
