[package]
name = "anodizer-stage-publish"
description = "Publish stage for the anodizer release tool — publishes crates and package manager manifests"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anodizer-core.workspace = true
anodizer-stage-blob.workspace = true
anodizer-stage-release.workspace = true
anodizer-stage-snapcraft.workspace = true
anyhow.workspace = true
glob.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml_ng.workspace = true
tempfile.workspace = true
zip.workspace = true
tera.workspace = true
base64.workspace = true
regex.workspace = true
reqwest.workspace = true
sha2.workspace = true
md-5.workspace = true
schemars.workspace = true

[dev-dependencies]
anodizer-core = { workspace = true, features = ["test-helpers"] }
