[package]
name = "anodizer-stage-publish"
description = "Publish stage for the anodizer release tool — publishes crates and package manager manifests"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
# Exposes the `testing` module (`FakePublisher` + helpers) to consumers.
# Enabled by this crate's own `[dev-dependencies]` so integration tests
# under `tests/` can drive the same fakes that in-crate unit tests use.
# NOT a stable public API — shape may change without notice.
test-support = []

[dependencies]
anodizer-core.workspace = true
anodizer-stage-release.workspace = true
anyhow.workspace = true
flate2.workspace = true
glob.workspace = true
tar.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
jsonschema.workspace = true
serde_yaml_ng.workspace = true
tempfile.workspace = true
zip.workspace = true
tera.workspace = true
base64.workspace = true
regex.workspace = true
reqwest.workspace = true
sha2.workspace = true
md-5.workspace = true
schemars.workspace = true
toml_edit.workspace = true

[dev-dependencies]
anodizer-core = { workspace = true, features = ["test-helpers"] }
anodizer-stage-publish = { path = ".", features = ["test-support"] }
serial_test.workspace = true
