[package]
name = "anodize-stage-release"
description = "Release stage for the anodize release tool — creates GitHub releases and uploads artifacts"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anodize-core.workspace = true
anyhow.workspace = true
glob.workspace = true
octocrab.workspace = true
serde_json.workspace = true
tokio.workspace = true
