[package]
name = "anodize-stage-release"
description = "Release stage for the anodize release tool — creates GitHub releases and uploads artifacts"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anodize-core.workspace = true
anodize-stage-checksum = { path = "../stage-checksum" }
anyhow.workspace = true
glob.workspace = true
http.workspace = true
hyper-rustls.workspace = true
hyper-util.workspace = true
octocrab.workspace = true
percent-encoding.workspace = true
reqwest.workspace = true
rustls.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
anodize-core = { workspace = true, features = ["test-helpers"] }
serde_yaml_ng.workspace = true
tempfile = "3"
