[package]
name = "anodizer-stage-release"
description = "Release stage for the anodizer release tool — creates GitHub releases and uploads artifacts"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"

[dependencies]
anodizer-core.workspace = true
anodizer-stage-checksum.workspace = true
anyhow.workspace = true
glob.workspace = true
http.workspace = true
hyper-rustls.workspace = true
hyper-timeout.workspace = true
hyper-util.workspace = true
octocrab.workspace = true
percent-encoding.workspace = true
reqwest.workspace = true
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["signal"] }
tower.workspace = true
tracing.workspace = true

[dev-dependencies]
anodizer-core = { workspace = true, features = ["test-helpers"] }
serde_yaml_ng.workspace = true
serial_test.workspace = true
tempfile = "3"
tokio = { workspace = true, features = ["signal", "test-util"] }
