[package]
name = "anodizer-stage-sbom"
description = "SBOM (Software Bill of Materials) generation stage for the anodizer release tool"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"

[dependencies]
anodizer-core.workspace = true
anyhow.workspace = true
glob.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
chrono.workspace = true

[dev-dependencies]
anodizer-core = { workspace = true, features = ["test-helpers"] }
tempfile.workspace = true
