[package]
name = "anodize-stage-sign"
description = "Signing stage for the anodize release tool — signs artifacts with GPG or other tools"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anodize-core.workspace = true
anyhow.workspace = true

[dev-dependencies]
anodize-core = { workspace = true, features = ["test-helpers"] }
serde_yaml_ng.workspace = true
tempfile.workspace = true
