[package]
name = "anodizer-stage-sign"
description = "Signing stage for the anodizer release tool — signs artifacts with GPG or other tools"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"

[dependencies]
anodizer-core.workspace = true
anyhow.workspace = true
tempfile.workspace = true

[dev-dependencies]
anodizer-core = { workspace = true, features = ["test-helpers"] }
serde_yaml_ng.workspace = true
serial_test.workspace = true
tempfile.workspace = true
