[package]
name = "anodizer-stage-sign"
description = "Signing stage for the anodizer release tool — signs artifacts with GPG or other tools"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"

[dependencies]
anodizer-core.workspace = true
anyhow.workspace = true
# TUF timestamp freshness probe: parse `timestamp.json`'s `signed.expires`
# (RFC 3339) so an expired cache warms up serially instead of fanning out.
chrono.workspace = true
serde_json.workspace = true
# Advisory file lock (flock / LockFileEx) guarding cosign's first-run TUF
# trust-root init against a second anodizer process on the same host.
fs4.workspace = true
tempfile.workspace = true

[dev-dependencies]
anodizer-core = { workspace = true, features = ["test-helpers"] }
serde_yaml_ng.workspace = true
serial_test.workspace = true
tempfile.workspace = true
