[package]
name = "anodize-stage-snapcraft"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Snapcraft packaging stage for anodize release automation"

[dependencies]
anodize-core.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng.workspace = true
tempfile.workspace = true
