[package]
name = "anodizer-stage-source"
description = "Source archive and SBOM generation stage for the anodizer release tool"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anodizer-core.workspace = true
anyhow.workspace = true
glob.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
chrono.workspace = true
tar.workspace = true
flate2.workspace = true
zip.workspace = true

[dev-dependencies]
anodizer-core = { workspace = true, features = ["test-helpers"] }
tempfile.workspace = true
serde_yaml_ng.workspace = true
serial_test.workspace = true
