[package]
name = "anodizer-stage-srpm"
description = "Source RPM (SRPM) package stage for the anodizer release tool"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anodizer-core.workspace = true
anyhow.workspace = true
chrono.workspace = true
glob.workspace = true
serde_json.workspace = true

[dev-dependencies]
anodizer-core = { workspace = true, features = ["test-helpers"] }
serde_yaml_ng.workspace = true
serial_test.workspace = true
tempfile.workspace = true
