[package]
name = "anodizer-stage-upx"
description = "UPX binary compression stage for the anodizer release tool"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anodizer-core.workspace = true
anyhow.workspace = true
glob.workspace = true

[dev-dependencies]
anodizer-core = { workspace = true, features = ["test-helpers"] }
serde_yaml_ng.workspace = true
tempfile.workspace = true
