[package]
name = "anodizer-stage-verify-release"
description = "Post-release verification gate for the anodizer release tool — asset-existence, install smoke-test, and glibc-ceiling checks"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anodizer-core.workspace = true
anodizer-stage-release.workspace = true
anodizer-stage-sbom.workspace = true
anodizer-stage-sign.workspace = true
anyhow.workspace = true
flate2.workspace = true
object.workspace = true
tar.workspace = true
tokio.workspace = true
xz2.workspace = true
zstd.workspace = true

[dev-dependencies]
anodizer-core = { workspace = true, features = ["test-helpers"] }
serde_json.workspace = true
serde_yaml_ng.workspace = true
tempfile.workspace = true
